--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material-next": "^6.0.0-alpha.126",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.13.5",
     "framer-motion": "^12.7.4",
     "react": "^18.3.1",
